--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -48,7 +48,7 @@
         ]
     },
     {
-        "id": "0",
+        "id": "1",
         "title": "Web Template",
         "content": [
             {
@@ -70,6 +70,26 @@
                 "nameProject": "Films",
                 "ImgProject": "../",
                 "link": "https://alexrixten.github.io/film-app/",
+                "description": ""
+            }
+        ]
+    },
+    {
+        "id": "2",
+        "title": "App",
+        "content": [
+            {
+                "id": "0",
+                "nameProject": "ToDo List",
+                "ImgProject": "../",
+                "link": "https://alexrixten.github.io/todo-app/",
+                "description": "It’s a list of tasks you need to complete or things that you want to do."
+            },
+            {
+                "id": "1",
+                "nameProject": "Shop",
+                "ImgProject": "../",
+                "link": "https://alexrixten.github.io/shop-app/",
                 "description": ""
             }
         ]
